Fixed hover background on social media icons.

--- a/main.html
+++ b/main.html
@@ -185,7 +185,7 @@ header ul, .caption li, .audio_info ul, #projects, #admins, #updates, #stats, #a
   list-style-type: none;
 }
 
-header a i:hover, .buttons a:hover::after, #pagination .fas, .custom_like_button:hover span::after, .like_button.liked + span, .tag_info h2, .tag_info i {
+#social a:hover::before, .buttons a:hover::after, #pagination .fas, .custom_like_button:hover span::after, .like_button.liked + span, .tag_info h2, .tag_info i {
   background-image: {color:border one};
   background-image: -webkit-linear-gradient(left, {color:border one} 0%, {color:border two} 100%);
   background-image: -moz-linear-gradient(left, {color:border one} 0%, {color:border two} 100%);
