Fixed permalink icons

--- a/main.html
+++ b/main.html
@@ -196,13 +196,13 @@ header ul, .caption li, .audio_info ul, #projects, #admins, #updates, #stats, #a
 }
 
 /*ICONS*/
-.fontawesome .caption li::before, .fontawesome .ptags a::before, .fontawesome .lh a::before, .fontawesome .asker a::before, .fontawesome .answerer a::after, .fontawesome #social li a::before, .fontawesome #search_bar::after, .fontawesome #projects a::after, .fontawesome #tumblr_controls::after, .fontawesome .tag_info span::after, .fontawesome .buttons a::after, .fontawesome .custom_like_button span::after, .fontawesome .ptags span, .fontawesome #pagination a:last-child::after, .fontawesome #pagination a:first-child::after {
+.fontawesome .caption li::before, .fontawesome .ptags a::before, .fontawesome .lh a::before, .fontawesome .asker a::before, .fontawesome .answerer a::after, .fontawesome #social li a::before, .fontawesome #search_bar::after, .fontawesome #projects a::after, .fontawesome #tumblr_controls::after, .fontawesome .tag_info span::after, .fontawesome .buttons a::after, .fontawesome .custom_like_button span::after, .fontawesome .ptags span, .fontawesome #pagination a:last-child::after, .fontawesome #pagination a:first-child::after, .fontawesome .note.like::before, .fontawesome .note.reblog::before, .fontawesome .note.reply::before {
   font-family: 'Font Awesome 5 Free','Font Awesome 5 Brands';
   font-weight: 900;
   display: inline-block;
 }
 
-.honeybee .caption li::before, .honeybee .ptags a::before, .honeybee .lh a::before, .honeybee .asker a::before, .honeybee .answerer a::after, .honeybee #social li a::before, .honeybee #search_bar::after, .honeybee #projects a::after, .honeybee #tumblr_controls::after, .honeybee .tag_info span::after, .honeybee .buttons a::after, .honeybee .custom_like_button span::after, .honeybee .ptags span, .honeybee #pagination a:last-child::after, .honeybee #pagination a:last-child::after {
+.honeybee .caption li::before, .honeybee .ptags a::before, .honeybee .lh a::before, .honeybee .asker a::before, .honeybee .answerer a::after, .honeybee #social li a::before, .honeybee #search_bar::after, .honeybee #projects a::after, .honeybee #tumblr_controls::after, .honeybee .tag_info span::after, .honeybee .buttons a::after, .honeybee .custom_like_button span::after, .honeybee .ptags span, .honeybee #pagination a:last-child::after, .honeybee #pagination a:last-child::after, .honeybee .note.like::before, .honeybee .note.reblog::before, .honeybee .note.reply::before {
   font-family: 'honeybee';
   font-weight: 900;
   display: inline-block;
@@ -1085,9 +1085,6 @@ footer a {
 .plnotes img {display: none; vertical-align: middle;}
 .plnotes img, .plnotes a {margin: 0 5px 0 0;}
 .avatar_frame {display: none;}
-.note.like::before {width: 1.25em;display: inline-block;text-align:center;font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f004";}
-.note.reblog::before {width: 1.25em;display: inline-block;text-align:center;font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f079";}
-.note.reply::before {width: 1.25em;display: inline-block;text-align:center;font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f075";}
 .more_notes_link_container {margin-top: 50px!important;}
 .more_notes_link_container a {font-style: normal!important;}
 
