Fixed mobile menu spacing

--- a/main.html
+++ b/main.html
@@ -1112,7 +1112,7 @@ footer a {
     height: 0px;
     display: block;
     overflow: hidden;
-    padding: 0;
+    padding: 35px 0 0 0;
     list-style-type: none;
     transition: height 0.5s ease-out;
     position: fixed;
@@ -1127,8 +1127,6 @@ footer a {
   #mobile_menu li {
     padding: 10px 20px;
   }
-
-  #mobile_menu li:first-of-type {padding: 35px 0 0 0;}
 
   #mobile_menu li a {
     color: {color:accent};
