Fixed Update Text Fields

--- a/main.html
+++ b/main.html
@@ -1659,8 +1659,8 @@ footer a {
           {block:IfUpdateOne}<li>{block:IfDateOne}<span>{text:date one}</span>{/block:IfDateOne}{text:update one}</li>{/block:IfUpdateOne}
           {block:IfUpdateTwo}<li>{block:IfDateTwo}<span>{text:date two}</span>{/block:IfDateTwo}{text:update two}</li>{/block:IfUpdateTwo}
           {block:IfUpdateThree}<li>{block:IfDateThree}<span>{text:date three}</span>{/block:IfDateThree}{text:update three}</li>{/block:IfUpdateThree}
-          {block:IfUpdateThree}<li>{block:IfDateThree}<span>{text:date three}</span>{/block:IfDateThree}{text:update three}</li>{/block:IfUpdateThree}
           {block:IfUpdateFour}<li>{block:IfDateFour}<span>{text:date four}</span>{/block:IfDateFour}{text:update four}</li>{/block:IfUpdateFour}
+          {block:IfUpdateFive}<li>{block:IfDateFive}<span>{text:date five}</span>{/block:IfDateFive}{text:update Five}</li>{/block:IfUpdateFive}
         </ul>
       </div>
 
