--- a/main.html
+++ b/main.html
@@ -287,7 +287,7 @@ header ul, .caption li, .audio_info ul, #projects, #admins, #updates, #stats, #a
   display: inline-block;
 }
 
-.honeybee .caption li::before, .honeybee .ptags a::before, .honeybee .lh a::before, .honeybee .asker a::before, .honeybee .answerer a::after, .honeybee #social li a::before, .honeybee #search_bar::after, .honeybee #projects a::after, .honeybee #tumblr_controls::after, .honeybee .tag_info span::after, .honeybee .buttons a::after, .honeybee .custom_like_button span::after, .honeybee .ptags span, .honeybee #pagination a:last-child::after, .honeybee #pagination a:last-child::after, .honeybee .note.like::before, .honeybee .note.reblog::before, .honeybee .note.reply::before {
+.honeybee .caption li::before, .honeybee .ptags a::before, .honeybee .lh a::before, .honeybee .asker a::before, .honeybee .answerer a::after, .honeybee #social li a::before, .honeybee #search_bar::after, .honeybee #projects a::after, .honeybee #tumblr_controls::after, .honeybee .tag_info span::after, .honeybee .buttons a::after, .honeybee .custom_like_button span::after, .honeybee .ptags span, .honeybee #pagination a:last-child::after, .honeybee #pagination a:first-child::after, .honeybee .note.like::before, .honeybee .note.reblog::before, .honeybee .note.reply::before {
   font-family: 'honeybee';
   font-weight: 900;
   display: inline-block;
@@ -951,9 +951,10 @@ footer a {
 .caption p a, .caption ul a {padding: 0 0px; box-shadow: inset 0 -5px {color:border one};}
 .caption a:hover {box-shadow: inset 0 -50px {color:border two}; color: #f8f8f8;}
 .caption p {margin: 15px 0;}
-.caption p:last-of-type {margin-bottom: 0;}
-.caption p:first-of-type {margin-top: 0;}
-.caption p:only-of-type {margin: 0;}
+.caption p:last-of-type {margin-bottom: 0;} 
+.caption > :first-child {margin-top: 0;}
+.caption > :only-child {margin: 0;}
+.caption blockquote p {margin: 0 auto}
 .reblog_parent {padding: 0px 0px 0px 0px; margin: 25px 0px;}
 .reblog_parent:first-child {margin-top: 0;}
 .reblog_parent:last-child {margin-bottom: 0;}
@@ -2023,7 +2024,9 @@ footer a {
         <!--PHOTO-->
         {block:Photo}
         <div class="post_photo">
+          {LinkOpenTag}
           <img src="{PhotoURL-HighRes}" alt="{PhotoAlt}">
+          {LinkCloseTag}
         </div>
         {/block:Photo}
 
