--- a/main.html
+++ b/main.html
@@ -983,6 +983,11 @@ footer a {
   line-height: 100%;
 }
 
+/*photoset*/
+iframe.photoset {
+  max-width: {select:post width}px;
+}
+
 /*link*/
 .lh {background: none;}
 .lh a {padding: 0 5px;}
