--- a/main.html
+++ b/main.html
@@ -950,7 +950,7 @@ footer a {
 .caption h2 {margin-bottom: 10px; width: 100%; text-align: left;}
 .caption p a, .caption ul a {padding: 0 0px; box-shadow: inset 0 -5px {color:border one};}
 .caption a:hover {box-shadow: inset 0 -50px {color:border two}; color: #f8f8f8;}
-.caption p {margin: 15px 0;}
+.caption p {margin: 15px 0; word-break: break-word;}
 .caption p:last-of-type {margin-bottom: 0;} 
 .caption > :first-child {margin-top: 0;}
 .caption > :only-child {margin: 0;}
