Fixed single post spacing
Fixed an issue with the post content disappearing when there's only one post.

--- a/main.html
+++ b/main.html
@@ -713,7 +713,7 @@ main {
   position: relative;
   height: auto;
   background: none;
-  margin: 116px 0 0 0;
+  margin: 116px 0 100px 0;
   padding: 0px 0px;
   text-align: justify;
   overflow: auto;
